--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ h1 {
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap');
 
 :root {
-	--gradient: linear-gradient( 135deg, #72EDF2 10%, #5151E5 100%);
+	--gradient: linear-gradient( 135deg, var(--color-bg1), var(--color-bg2));
 }
 
 * {
@@ -60,7 +60,7 @@ body {
 	position: relative;
 	height: 100%;
 	border-radius: 25px;
-	background-image: url("https://images.unsplash.com/photo-1559963110-71b394e7494d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=675&q=80");
+	background-image: url("https://i.pinimg.com/736x/15/41/39/154139f5d6f1a38f2993daf659cdc414.jpg");
 	width: 300px;
 	-webkit-box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.2);
 	        box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.2);
@@ -118,7 +118,7 @@ body {
 
 .weather-container {
 	position: absolute;
-	bottom: 25px;
+	bottom: 65px;
 	left: 25px;
 }
 
@@ -128,9 +128,8 @@ body {
 }
 
 .weather-temp {
-	margin: 0;
 	font-weight: 700;
-	font-size: 4em;
+	font-size: 3.5em;
 }
 
 .weather-desc {
